# clap-verbosity-flags

./: Cargo.toml
examples/: log.rs  tracing.rs
src/: lib.rs
