[workspace]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.66.0"  # MSRV
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "Cargo.lock",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*"
]

[package]
name = "clap-verbosity-flag"
version = "2.0.1"
description = "Easily add a `--verbose` flag to CLIs using Clap"
authors = ["Pascal Hertleif <killercup@gmail.com>"]
repository = "https://github.com/clap-rs/clap-verbosity-flag"
readme = "README.md"
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/clap-rs/clap-verbosity-flag/compare/{{tag_name}}...HEAD", exactly=1},
]

[badges]
codecov = { repository = "clap-rs/clap-verbosity-flag" }

[features]
default = ["log", "tracing"]
log = ["dep:log"]
tracing = ["dep:tracing-subscriber"]

[dependencies]


[dependencies.tracing-subscriber]
version = "0.3.17"
optional = true

[dependencies.log]
version = "0.4.1"
optional = true

[dependencies.clap]
version = "4.0.0"
default-features = false
features = ["std", "derive"]

[dev-dependencies]
pretty_env_logger = "0.4.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[[example]]
name = "log"
path = "examples/log.rs"
required-features = ["log"]

[[example]]
name = "tracing"
path = "examples/tracing.rs"
required-features = ["tracing"]

